# aoc-2023

./: .gitignore  README.md  pyproject.toml
01/: solution_part_one_test.py  solution_part_two_test.py
02/: solution_part_one_test.py
day01/: day01.go  day01_test.go  go.mod  solution_part1.py  solution_part2.py  solution_part_one_test.py  solution_part_two_test.py
day02/: solution_day02.py  solution_day02_part_one_test.py  solution_day02_part_two.py  solution_day02_part_two_test.py
day03/: solution_day03.py  solution_day03_part_one_test.py  solution_day03_part_two.py  solution_day03_part_two_test.py
day04/: solution_day04.py  solution_day04_part_one_test.py  solution_day04_part_two.py  solution_day04_part_two_test.py
day05/: solution_day05.py  solution_day05_part_one_test.py  solution_day05_part_two.py  solution_day05_part_two_test.py
day06/: solution_day06.py  solution_day06_part_one_test.py  solution_day06_part_two.py  solution_day06_part_two_test.py
day07/: solution_day07.py  solution_day07_part_one_test.py  solution_day07_part_two.py  solution_day07_part_two_test.py
day08/: solution_day08.py  solution_day08_part_two.py  solution_day08_part_two_test.py  solution_day08_test.py
day09/: solution_day09.py  solution_day09_part_one_test.py  solution_day09_part_two.py  solution_day09_part_two_test.py
