[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["Ciro Lucio Tecce <cirolucio.tecce@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.11.0"
pylint = "^3.0.2"
prettytable = "^3.9.0"
tqdm = "^4.66.1"
numba = "^0.58.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
